Finished but needs comments

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Game of Life - Fullstack Academy</title>
+  <title>Game of Life</title>
   <link rel="stylesheet" href="libraries/bootstrap.min.css">
   <link rel="stylesheet" href="game.css">
 </head>
@@ -18,12 +18,16 @@
     <button id='reset_btn' class='btn btn-warning'>Reset Random</button>
     <button id='clear_btn' class='btn btn-info'>Clear</button>
   </div>
+  <div id="control_panel">
+    <button id='stop-btn' class='btn btn-danger'>Pause</button> 
+    <button id='reset-btn' class='btn btn-danger'>Reset</button>
+  </div>
 
   <br><br>
 
   <footer class="footer">
     <div class="container">
-      <p class="text-muted">Construido por [mi] en <a href="http://www.plataforma5.la/">Plataforma 5</a></p>
+      <p class="text-muted">Construido por <a href="https://github.com/tyago343">Santiago Casanova</a></p>
     </div>
   </footer>
 
